04-kubernetes_minikube/ingress/httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpd-deployment
  name: httpd-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd-deployment
  template:
    metadata:
      labels:
        app: httpd-deployment
    spec:
      containers:
      - image: httpd:latest
        name: httpd
