04-kubernetes_minikube/ingress/httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-deployment
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: httpd-deployment
  type: NodePort
