04-kubernetes_minikube/ingress/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: nginx-deployment
  type: NodePort
