04-kubernetes_minikube/ingress/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-deployment-host
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "nginx.miservicio.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deployment
            port:
              number: 80
  - host: "httpd.miservicio.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd-deployment
            port:
              number: 80
